added local file cameras

--- a/automations/netatmo/DownloadSnapshotTerrasse.yaml
+++ b/automations/netatmo/DownloadSnapshotTerrasse.yaml
@@ -15,20 +15,16 @@ action:
       overwrite: true
   - service: downloader.download_file
     data_template:
-      { "url": "{{ trigger.payload_json['snapshot_url'] }}",
-        "subdir": "camera",
-        "filename": "CamTerrasse_{{ trigger.payload_json['event_type'] }}_latest.jpg",
-        "overwrite": "true"
-      }
+      url: "{{ trigger.payload_json['snapshot_url'] }}"
+      subdir: "camera"
+      filename: "CamTerrasse_{{ trigger.payload_json['event_type'] }}_latest.jpg"
+      overwrite": true
   - service: downloader.download_file
     data_template:
-      { "url": "{{ trigger.payload_json['snapshot_url'] }}",
-        "subdir": "camera",
-        "filename": "CamTerrasse_latest.jpg",
-        "overwrite": "true"
-      }
-  - delay:
-      seconds: 5
+      url: "{{ trigger.payload_json['snapshot_url'] }}"
+      subdir: "camera"
+      filename: "CamTerrasse_latest.jpg"
+      overwrite: true
   - service: image_processing.scan
     data:
       entity_id: image_processing.face_counter_terrasse
