--- a/automations/netatmo/DownloadSnapshotTerrasse.yaml
+++ b/automations/netatmo/DownloadSnapshotTerrasse.yaml
@@ -27,4 +27,4 @@ action:
       overwrite: true
   - service: image_processing.scan
     data:
-      entity_id: image_processing.face_counter_terrasse
+      entity_id: image_processing.face_counter_terrasse_human
