--- a/automations/netatmo/DownloadSnapshotTerrasse.yaml
+++ b/automations/netatmo/DownloadSnapshotTerrasse.yaml
@@ -18,7 +18,7 @@ action:
       url: "{{ trigger.payload_json['snapshot_url'] }}"
       subdir: "camera"
       filename: "CamTerrasse_{{ trigger.payload_json['event_type'] }}_latest.jpg"
-      overwrite": true
+      overwrite: true
   - service: downloader.download_file
     data_template:
       url: "{{ trigger.payload_json['snapshot_url'] }}"
