--- a/ui/deepstack/terrasse.yaml
+++ b/ui/deepstack/terrasse.yaml
@@ -1,5 +1,17 @@
 type: vertical-stack
 cards:
 - type: picture-entity
-  entity: camera.deepstack_face_terrasse
-  name: Deepstack Face Terrasse
+  entity: camera.terrasse_last_seen_virginia
+  name: Virginia
+- type: picture-entity
+  entity: camera.terrasse_last_seen_vincent
+  name: Vincent
+- type: picture-entity
+  entity: camera.terrasse_last_seen_unknown
+  name: Inconnu
+- type: picture-entity
+  entity: camera.terrasse_mouvement
+  name: Mouvement
+- type: picture-entity
+  entity: camera.terrasse_vehicule
+  name: Véhicule
