--- a/ui/deepstack/terrasse.yaml
+++ b/ui/deepstack/terrasse.yaml
@@ -11,7 +11,7 @@ cards:
   name: Inconnu
 - type: picture-entity
   entity: camera.terrasse_humain
-  name: Mouvement
+  name: Personne
 - type: picture-entity
   entity: camera.terrasse_mouvement
   name: Mouvement
