--- a/cameras/salon_last_seen_virginia.yaml
+++ b/cameras/salon_last_seen_virginia.yaml
@@ -1,3 +1,3 @@
 platform: local_file
 name: Salon Last Seen Virginia
-file_path: /config/www/deepstack/Salon/Virginia/deepstack_latest_face.jpg
+file_path: /config/www/deepstack/Salon/Virginia/deepstack_face_latest
