--- a/cameras/terrasse_last_seen_vincent.yaml
+++ b/cameras/terrasse_last_seen_vincent.yaml
@@ -1,3 +1,3 @@
 platform: local_file
 name: Terrasse Last Seen Vincent
-file_path: /config/www/deepstack/Terrasse/Vincent/deepstack_latest_face.jpg
+file_path: /config/www/deepstack/Terrasse/Vincent/deepstack_face_latest
