--- a/cameras/terrasse_last_seen_virginia.yaml
+++ b/cameras/terrasse_last_seen_virginia.yaml
@@ -1,3 +1,3 @@
 platform: local_file
 name: Terrasse Last Seen Virginia
-file_path: /config/www/deepstack/Terrasse/Virginia/deepstack_latest_face.jpg
+file_path: /config/www/deepstack/Terrasse/Virginia/deepstack_face_latest
