--- a/.gitignore
+++ b/.gitignore
@@ -9,38 +9,38 @@
 !.gitmodules
 !*.md
 !.travis.yml
-!automations/
-!binary_sensors/
-!cameras/
-!climates/
+!includes/automations/
+!includes/binary_sensors/
+!includes/cameras/
+!includes/climates/
 !custom_components/
-!device_trackers/
-!image_processings/
+!includes/device_trackers/
+!includes/image_processings/
 !includes/
-!input_booleans/
-!input_selects/
-!media_players/
-!notifies/
-!panel_iframes/
-!remotes/
-!sensors/
+!includes/input_booleans/
+!includes/input_selects/
+!includes/media_players/
+!includes/notifies/
+!includes/panel_iframes/
+!includes/remotes/
+!includes/sensors/
 !ui/
 !www/
-!automations/**
-!binary_sensors/**
-!cameras/**
-!climates/**
+!includes/automations/**
+!includes/binary_sensors/**
+!includes/cameras/**
+!includes/climates/**
 !custom_components/**
-!device_trackers/**
-!image_processings/**
+!includes/device_trackers/**
+!includes/image_processings/**
 !includes/**
-!input_booleans/**
-!input_selects/**
-!media_players/**
-!notifies/**
-!panel_iframes/**
-!remotes/**
-!sensors/**
+!includes/input_booleans/**
+!includes/input_selects/**
+!includes/media_players/**
+!includes/notifies/**
+!includes/panel_iframes/**
+!includes/remotes/**
+!includes/sensors/**
 !ui/**
 !www/**
 
