--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,18 +1,20 @@
 resources:
-- type: module
-  url: /local/community/mini-graph-card-bundle.js
-- type: module
-  url: /local/community/custom-weather-card-chart.js
-- type: js
-  url: /local/community/vertical-stack-in-card.js?v=0.1.3
-- type: js
-  url: /local/community/lovelace-home-feed-card/home-feed-card.js
-- url: /community_plugin/atomic_calendar/atomic_calendar.js
+- url: /local/community/mini-graph-card-bundle.js
   type: module
-- url: /customcards/github/thomasloven/card-tools.js?track=true
+- url: /local/community/custom-weather-card-chart.js
+  type: module
+- url: /local/community/vertical-stack-in-card.js?v=0.1.3
   type: js
-- url: /customcards/github/thomasloven/layout-card.js?track=true
+- url: /local/community/lovelace-home-feed-card/home-feed-card.js
   type: js
+- url: /local/community_plugin/atomic_calendar/atomic_calendar.js
+  type: module
+- url: /local/community/lovelace-card-tools/card-tools.js
+  type: js
+- url: /local/community/lovelace-card-tools/layout-card.js
+  type: js
+- url: /local/community/plugin/banner-card/banner-card.js
+  type: module
 
 title: Ti Ar Kaerell
 views:
@@ -45,3 +47,13 @@ views:
 - path: deepstack
   title: Deepstack
   cards: !include_dir_list ui/deepstack
+
+# Onglet cast
+- path: cast
+  title: cast
+  cards:
+  - type: custom:layout-card
+    layout: horizontal
+    column_num: 3
+    max_columns: 3
+    cards: !include_dir_list ui/cast
