--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -62,6 +62,10 @@ views:
       name: Vincent
     - entity: device_tracker.virginia_presence
       name: Virginia
+    - entity: camera.camterrasse
+      name: " "
+    - entity: camera.camsalon
+      name: " "
     - entity: sensor.netatmo_type_terrasse
       name: Terrasse
     - entity: sensor.netatmo_type_salon
