--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -98,3 +98,26 @@ views:
         name: "Grand Volet"
       - entity: cover.rolling_shutter_2
         name: "Petit Volet"
+  - type: custom:banner-card
+    background: "#2F4F4F"
+    link: /lovelace/rez
+    heading: "Salon"
+    entities:
+      - entity: sensor.tdeg_salon
+        name: Température
+      - entity: sensor.humidite_salon
+        name: Humidité
+      - entity: cover.rolling_shutter_3
+        name: "Porte Fenêtre"
+      - entity: lignt.lampe_peau
+        name: "Lampe Canapé"
+      - entity: light.lux_salon_1
+        name: "Salon 1"
+      - entity: light.lux_salon_2
+        name: "Salon 2"
+      - entity: light.lux_salon_3
+        name: "Salon 3"
+      - entity: switch.ampli
+        name: "Spotify"
+      - entity: switch.television
+        name: "Télé"
