--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -135,3 +135,40 @@ views:
         name: Volet
       - entity: input_select.qubino
         name: Mode
+  - type: custom:banner-card
+    background: "#CD5C5C"
+    link: /lovelace/etage
+    heading: Chambre de Lenaïc
+    entities:
+      - entity: sensor.sensative_strips_comfort_temperature
+        name: Température
+      - entity: switch.toggle_velux_lenaic
+        name: Vélux
+      - entity: switch.toggle_volet_lenaic
+        name: Volet
+      - entity: switch.toggle_both_lenaic
+        name: Les Deux
+  - type: custom:banner-card
+    background: "#CDED5C"
+    link: /lovelace/etage
+    heading: Palier
+    entities:
+      - entity: sensor.netatmo_palier_temperature
+        name: Température
+      - entity: switch.toggle_velux_palier
+        name: Vélux
+      - entity: switch.toggle_volet_palier
+        name: Volet
+      - entity: switch.toggle_both_palier
+        name: Les Deux
+  - type: custom:banner-card
+    background: "#CB4D5A"
+    link: /lovelace/etage
+    heading: Chambre Parentale
+    entities:
+      - entity: sensor.tdeg_parents
+        name: Température
+      - entity: light.lux_parents_1
+        name: Lumière 1
+      - entity: light.lux_parents_2
+        name: Lumière 2
