--- a/includes/google_assistant.yaml
+++ b/includes/google_assistant.yaml
@@ -3,6 +3,7 @@ api_key: !secret google-assistant-api-key
 exposed_domains:
 - cover
 - climate
+- lock
 - switch
 entity_config:
   cover.velux_palier:
