automatically lock door when house is empty.

--- a/ui/accueil/3_cameras.yaml
+++ b/ui/accueil/3_cameras.yaml
@@ -14,3 +14,5 @@ cards:
     name: "Terrasse"
   - entity: sensor.netatmo_type_salon
     name: "Salon"
+  - entity: lock.ti_ar_kaerell
+    name: "Serrure"
