--- a/configuration.yaml
+++ b/configuration.yaml
@@ -50,6 +50,7 @@ logger:           !include includes/logger.yaml
 lovelace:         !include includes/lovelace.yaml
 mqtt:             !include includes/mqtt.yaml
 netatmo:          !include includes/netatmo.yaml
+proximity:        !include includs/proximity.yaml
 script:           !include includes/scripts.yaml
 shell_command:    !include includes/shell_command.yaml
 #somfy:            !include includes/somfy.yaml
