added proximity for Virginia.

--- a/includes/proximity.yaml
+++ b/includes/proximity.yaml
@@ -1,5 +1,10 @@
-home:
+home1:
   devices:
     - device_tracker.vincent
-  tolerance: 25
+  tolerance: 10
+  unit_of_measurement: km
+home2:
+  devices:
+    - device_tracker.virginia
+  tolerance: 10
   unit_of_measurement: km
