--- a/includes/switches.yaml
+++ b/includes/switches.yaml
@@ -105,4 +105,18 @@
         {% else %}
           mdi:lock
         {% endif %}
-    
+    volets:
+      value_template: "{{ is_state('group.volets','open') }}"
+      turn_on:
+        service: cover.open_cover
+        entity_id: group.volets
+      turn_off:
+        service: cover.close_cover
+        entity_id: group.volets
+      icon_template: >-
+        {% if is_state('group.volets','open') %}
+          mdi:window-open
+        {% else %}
+          mdi:window-closed
+        {% endif %}
+      
