Added thermostats to ui.

--- a/ui/etage/2_velux.yaml
+++ b/ui/etage/2_velux.yaml
@@ -28,14 +28,18 @@ cards:
     - type: entity-button
       name: Les deux
       entity: switch.toggle_both_lenaic
-- type: custom:vertical-stack-in-card
-  title: Chambre Parentale
+- type: vertical-stack
   cards:
-  - type: horizontal-stack
+  - type: custom:vertical-stack-in-card
+    title: Chambre Parentale
     cards:
-    - type: light
-      entity: light.lux_parents_1
-      name: Lux 1
-    - type: light
-      entity: light.lux_parents_2
-      name: Lux 2
+    - type: horizontal-stack
+      cards:
+      - type: light
+        entity: light.lux_parents_1
+        name: Lux 1
+      - type: light
+        entity: light.lux_parents_2
+        name: Lux 2
+  - type: thermostat
+    entity: climate.radiateur_parents
