--- a/includes/climates/RadiateurBureau.yaml
+++ b/includes/climates/RadiateurBureau.yaml
@@ -1,6 +1,6 @@
 platform: generic_thermostat
-name: Température Bureau
-heater: input_boolean.fake_heater
+name: Radiateur Bureau
+heater: switch.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_switch
 target_sensor: sensor.sensative_strips_comfort_temperature_2
-initial_hvac_mode: "off"
 target_temp: 21
+away_temp: 18
