--- a/includes/climates/Tahoma.yaml
+++ b/includes/climates/Tahoma.yaml
@@ -2,5 +2,13 @@ platform: tahoma
 sensors:
 - name: "Radiateur Parents"
   entity_id: sensor.tdeg_parents
+  away_temp: 16
+  eco_temp: 19
+  comfort_temp: 21
+  anti_freeze_temp: 8
 - name: "Radiateur Salon"
   entity_id: sensor.tdeg_salon
+  away_temp: 16
+  eco_temp: 19
+  comfort_temp: 21
+  anti_freeze_temp: 8
