--- a/includes/logger.yaml
+++ b/includes/logger.yaml
@@ -1,3 +1,3 @@
-default: info
+default: error
 logs:
-  homeassistant.components.deepstack_face: debug
+  homeassistant.components.automation: debug
