--- a/includes/device_trackers/CompositeVirginia.yaml
+++ b/includes/device_trackers/CompositeVirginia.yaml
@@ -3,4 +3,4 @@ name: Virginia composite
 time_as: local
 entity_id:
   - device_tracker.tile_dd661ca6aff34ef1
-  - device_tracker.ariela_virginia
+  - device_tracker.life360_virginia
