--- a/includes/device_trackers/CompositeVirginia.yaml
+++ b/includes/device_trackers/CompositeVirginia.yaml
@@ -2,5 +2,5 @@ platform: composite
 name: Virginia composite
 time_as: local
 entity_id:
-  - device_tracker.tile_dd661ca6aff34ef1
+#  - device_tracker.tile_dd661ca6aff34ef1
   - device_tracker.life360_virginia
