--- a/includes/automations/velux_palier/OpenIfCoolerOutside.yaml
+++ b/includes/automations/velux_palier/OpenIfCoolerOutside.yaml
@@ -11,6 +11,8 @@ condition:
     entity_id: sensor.netatmo_pluie_jardin_rain
   - condition: template
     value_template: "{{ not is_state('weather.ti_ar_kaerell','rainy') }}"
+  - condition: template
+    value_template: "{{ states.cover.velux_palier.attributes.current_position < 95 }}"
 action:
   - service: script.turn_on
     data:
