--- a/includes/automations/proximity/Virginia.yaml
+++ b/includes/automations/proximity/Virginia.yaml
@@ -3,6 +3,10 @@ alias: Virginia est sur le retour
 trigger:
   platform: template
   value_template: '{{ states.proximity.home2.attributes.dir_of_travel == "towards" }}'
+condition:
+  condition: numeric_state
+  entity_id: proximity.home2
+  above: 50
 action:
 - service: notify.google_push_pixel_2
   data:
