--- a/includes/automations/proximity/Virginia.yaml
+++ b/includes/automations/proximity/Virginia.yaml
@@ -3,6 +3,8 @@ alias: Virginia est sur le retour
 trigger:
   platform: template
   value_template: '{{ states.proximity.home2.attributes.dir_of_travel == "towards" }}'
+  for:
+    minutes: 2
 condition:
   condition: numeric_state
   entity_id: proximity.home2
