Attempt to solve tahoma climate for somfy's smart thermostat.

--- a/includes/google_assistant.yaml
+++ b/includes/google_assistant.yaml
@@ -1,4 +1,4 @@
-project_id: home-assistant-246207
+project_id: homeassistant-49a55
 api_key: !secret google-assistant-api-key
 exposed_domains:
 - cover
