--- a/ui/accueil/7_electricite.yaml
+++ b/ui/accueil/7_electricite.yaml
@@ -5,7 +5,7 @@ cards:
   points_per_hour: 0.043478
   entities:
   - entity: sensor.linky_yesterday
-    name: Journalier
+    name: Conso Journalière
   show:
     graph: bar
     points: hover
