Moved some automations to automations.yaml

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -24,7 +24,8 @@ person:
 stream:
 sun:
     
-automation:       !include_dir_list includes/automations
+automation:       !include automations.yaml
+automation old:   !include_dir_list includes/automations
 binary_sensor:    !include_dir_list includes/binary_sensors
 camera:           !include_dir_list includes/cameras
 climate:          !include_dir_list includes/climates
